5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1758_672.log
== SUBMITION (2019-05-23 10:21:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("x:"))
vet=ones(num, dtype=int)
print(vet)
-- EXECUTION TIME:
0.500301
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/672/main.py", line 4, in <module>
    vet=ones(num, dtype=int)
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:21:30) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("x:"))
vet=ones(num, dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:21:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("x:"))
vet= ones(num, dtype=int)
print(vet)
-- EXECUTION TIME:
0.347541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/672/main.py", line 4, in <module>
    vet= ones(num, dtype=int)
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:22:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("x:"))

vet= ones(n, dtype=int)
print(vet)
-- EXECUTION TIME:
0.314001
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
